# curso-na-way

./: .env.example  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
config/: __init__.py  database.py  models.py  settings.py
config/prompts/: frases_generation.yaml  gramatica_generation.yaml
config/prompts/ivo/: assessment_balacing.yaml  assessment_selection.yaml  grammar_content.yaml  qa_generation.yaml  sentences_contextual.yaml  sentences_generation.yaml  tips_strategies.yaml  vocabulary_generation.yaml
curso_na_way/: .gitignore  README.md  pyproject.toml
curso_na_way/config/: models.yaml
curso_na_way/config/prompts/: exercicios_generation.yaml  teoria_generation.yaml  tips_generation.yaml  vocab_generation.yaml
curso_na_way/src/: main.py
curso_na_way/src/api/: health.py
curso_na_way/src/core/: enums.py
src/: __init__.py  main.py
src/api/: __init__.py  health.py
src/api/v2/: Readme-API.md  __init__.py  assessments.py  books.py  courses.py  grammar.py  qa.py  sentences.py  tips.py  units.py  vocabulary.py
src/core/: Readme-Core.md  audit_logger.py  enums.py  hierarchical_models.py  models.py  pagination.py  rate_limiter.py  unit_models.py
src/mcp/: Readme-mcp.md  image_analysis_server.py  mcp_image_client.py
src/services/: Readme-services.md  __init__.py  aim_detector.py  assessment_selector.py  grammar_generator.py  hierarchical_database.py  image_analysis_service.py  l1_interference.py  prompt_generator.py  qa_generator.py  sentences_generator.py  tips_generator.py  vocabulary_generator.py
