[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "curso-na-way"
version = "0.1.0"
description = "Sistema de Geração de Apostilas de Inglês com IA"
authors = [{name = "Curso Na Way", email = "dev@cursoway.com"}]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "langchain>=0.1.0",
    "langchain-community>=0.0.10",
    "langchain-openai>=0.0.5",
    "supabase>=2.0.0",
    "pydantic>=2.5.0",
    "redis>=5.0.0",
    "python-multipart>=0.0.6",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    # PDF Generation
    "reportlab>=4.0.0",
    "weasyprint>=60.0",
    # Image Processing
    "pillow>=10.0.0",
    "opencv-python>=4.8.0",
    # AI/ML
    "openai>=1.0.0",
    "transformers>=4.35.0",
    # Additional
    "jinja2>=3.1.0",
    "python-dotenv>=1.0.0",
    "pydantic-settings>=2.0.0",
    "aiofiles>=23.0.0",
    "httpx>=0.25.0",
]

# CORREÇÃO: Especificar onde estão os pacotes Python
[tool.hatch.build.targets.wheel]
packages = ["src"]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.6.0",
    "pre-commit>=3.0.0",
]

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.6.0",
    "pre-commit>=3.0.0",
]

[tool.ruff]
target-version = "py311"
line-length = 88
select = ["E", "F", "I", "N", "W"]

[tool.black]
line-length = 88
target-version = ['py311']

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
